# add_subdirectory(common) # ok
# add_subdirectory(device) # dumped core
# add_subdirectory(driver) # ok
# add_subdirectory(job_wrapper) # ok
# add_subdirectory(msprof) # dumped core
# add_subdirectory(msprofbin) # ok
# add_subdirectory(streamio) # command dumped core
add_subdirectory(stub_stest)