# add_subdirectory(common) # done
# add_subdirectory(device) # done
# add_subdirectory(driver) # done
add_subdirectory(job_wrapper) # 2 JOB_WRAPPER_PROF_CTRLCPU_JOB_TEST.Uninit JOB_WRAPPER_PROF_LLC_JOB_TEST.Init
# add_subdirectory(msprof) # done
# add_subdirectory(msprofbin) # done
# add_subdirectory(streamio) # done
# add_subdirectory(stub_stest) # done