add_subdirectory(transport)
add_subdirectory(msprof)
add_subdirectory(app)
add_subdirectory(common)
add_subdirectory(driver)
add_subdirectory(job_wrapper)
add_subdirectory(message)
add_subdirectory(streamio)
add_subdirectory(msprofbin)
add_subdirectory(stub_utest)
add_subdirectory(plugin)
add_subdirectory(params_adapter)